--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head></head>
+<head>
+    <meta charset="UTF-8">
+    <title>fCC Cat Painting</title>
+    <link rel="stylesheet" href="./styles.css">
+</head>
 <body></body>
-  </html>
+</html>
