--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     <title>fCC Cat Painting</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
-<body></body>
+<body>
+  <main>
+    <div class='cat-head'></div>
+  </main>
+</body>
 </html>
