--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <main>
-    <div class='cat-head'></div>
-  </main>
+    <main>
+      <div class="cat-head"></div>
+      <div class="box"></div>
+    </main>
 </body>
 </html>
