--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
           <div class="cat-right-eye">
             <div class="cat-right-inner-eye"></div>
           </div>
-        </div>        
+        </div>
+        
+        <div class="cat-nose"></div>
+
+        
       </div>
     </main>
 </body>
